--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
+annotated-types==0.6.0
+anyio==3.7.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
+exceptiongroup==1.1.3
+fastapi==0.103.2
 idna==3.4
+pydantic==2.4.2
+pydantic_core==2.10.1
 requests==2.28.1
+sniffio==1.3.0
+starlette==0.27.0
+typing_extensions==4.8.0
 urllib3==1.26.13
 venmo-api==0.3.1
